Refactors and simplifies asset management; removes unused global events
Refactors asset and interface handling by simplifying imports, improving type safety, and utilizing the TRScript class for enhanced script evaluations. Removes unused classes related to global events and locations to streamline codebase.

Improves readability and maintainability by replacing redundant method calls with streamlined alternatives (e.g., `.toList()` over `Collectors.toList()`). Introduces new interfaces for handling component actions and styles in a modular way.

Eliminates deprecated or redundant functionalities, such as the `GlobalLocation` and `GlobalEventSchema` classes, to reduce technical debt. Updates interface schema to emphasize body-based component structures.